# birhasap-test-version

./: .gitignore  .prettierrc  commands.txt  nuxt.config.ts  package-lock.json  package.json
.github/workflows/: build-windows.yml  build-windows.yml.example
app/assets/css/: font-roboto.css  main.css  scrollbar.css  shadow.css
app/components/Bit/: Button.vue  (+1 more)
app/composables/: use-modal.ts
app/dto/: ProductTableRowDto.ts  RouteHistoryDto.ts  SaleTableRowDto.ts  TableColumnDto.ts  TableDataDto.ts  TableOrderDto.ts  TableRowBaseDto.ts
app/enums/: button-type-enum.ts  button-ui.ts  modal-type-enum.ts  navigation-button-ui.ts  table-column-order-enum.ts  table-sort-type.ts
app/layouts/: default.vue
app/middleware/: auth.global.ts
app/pages/: harytlar.vue  index.vue  kassir.vue  login.vue  satuwlar.vue
app/stores/: products.ts  route-history.ts  sales.ts  user.ts
app/types/: api.ts  index.ts
app/utils/: app-routes.ts  enums.ts
backend/: .env.example  Cargo.toml
backend/src/: main.rs
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: backend-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/database/migrations/: 20260717113504_create_users_table.sql
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20260721_144410_create_users_table.rs  m20260722_171826_create_product_table.rs
src-tauri/src/: backend.rs  commands.rs  database.rs  entities.rs  enums.rs  lib.rs  main.rs  models.rs  requests.rs  responses.rs
src-tauri/src/bootstrap/: backend.rs  db.rs  mod.rs  setup_db.rs
src-tauri/src/bootstrap/database/: mod.rs
src-tauri/src/bootstrap/database/seeds/: mod.rs  users.rs
src-tauri/src/commands/: backend.rs  mod.rs  prelude.rs
src-tauri/src/commands/admin/product/: create.rs  list.rs
src-tauri/src/commands/auth/: login.rs
src-tauri/src/database/: init.rs  mod.rs
src-tauri/src/database/seeders/: mod.rs  user_seed.rs  users.rs
src-tauri/src/entities/: mod.rs  prelude.rs  products.rs  user_entity.rs  users.rs
src-tauri/src/handlers/: auth.rs  prelude.rs
src-tauri/src/handlers/auth/: auth_login_action.rs  login.rs
src/entities/: mod.rs  users.rs
(+43 files in other folders)
