[workspace]
members = [".", "migration"]

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
tauri-typegen = "0.5.2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
futures-util = "0.3.32"
uuid = { version = "1.20.0", features = ["v7"] }
tokio = "1.53.1"
anyhow = "1.0.104"
sea-orm = { version = "2.0", features = [
   "sqlx-sqlite",
   "runtime-tokio-rustls",
] }
migration = { path = "./migration" }
sea-orm-migration = { version = "2.0.0", features = [
   "runtime-tokio-native-tls",
   "sqlx-sqlite",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
